@@ -20,7 +20,7 @@
     <string id="31010">Delete Music Videos</string>
     
     <!-- Conditions -->
-    <string id="32001">[B]This section specifies the conditions that must be met before any files are deleted[/B]</string>
+    <string id="32001">[B]Conditions that must be met before any files are deleted[/B]</string>
     <string id="32002">Only delete a video after a certain number of days after watching</string>
     <string id="32003">Days after which a video is considerd to have expired</string>
     
@@ -39,11 +39,7 @@
     <string id="32014">[I]Note that files in this holding folder will never be deleted automatically [/I]</string>
     
     
-    <!-- FAQ -->
-    <string id="33001">[B]Here you can find answers to frequently asked questions[/B]</string>
-    <string id="33002">Q: Why do I see more than one notification telling me XBMC File Cleaner has started?</string>
-    <string id="33003">A: [I]This is because you have recently upgraded to the new version. You should modify 'autoexec.py'[/I]</string>
-    <string id="33004">     [I]in the user directory to remove the line that starts XBMC File Cleaner.[/I]</string>
+
     
     
     <!-- Notifications and debug -->
